syntax = "proto2";

package sls;

option go_package = ".;sls";

message LogContent {
    required string Key = 1;
    required string Value = 2;
}

message Log {
    required uint32 Time = 1;  // UNIX Time Format
    repeated LogContent Contents = 2;
    optional uint32 TimeNs = 4;  // for time nano part
}

message LogTag {
    required string Key = 1;
    required string Value = 2;
}

message LogGroup {
    repeated Log Logs = 1;
    optional string Topic = 3;
    optional string Source = 4;
    repeated LogTag LogTags = 6;
}

message LogGroupList {
    repeated LogGroup LogGroups = 1;
}

